# serializer version: 1
# name: test_calc_eq_matrix_b[1x1]
  tuple(
    array([0, 0, 0, 2, 2, 4, 1, 1, 1, 3, 3, 5, 2, 4, 6, 4, 6, 6, 3, 5, 7, 5,
         7, 7], dtype=int32),
    array([0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3,
         4, 5], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[1x1].1
  2
# ---
# name: test_calc_eq_matrix_b[1x1].2
  tuple(
    8,
    6,
  )
# ---
# name: test_calc_eq_matrix_b[2x2]
  tuple(
    array([ 0,  0,  0,  0,  2,  2,  2,  2,  4,  4,  6,  6,  6,  8,  8,  8,  8,
         10, 10, 10, 12, 14,  1,  1,  1,  1,  3,  3,  3,  3,  5,  5,  7,  7,
          7,  9,  9,  9,  9, 11, 11, 11, 13, 15,  2,  6,  8, 10,  4,  6,  8,
         10,  8, 10,  8, 12, 14, 10, 12, 14, 16, 12, 14, 16, 14, 16,  3,  7,
          9, 11,  5,  7,  9, 11,  9, 11,  9, 13, 15, 11, 13, 15, 17, 13, 15,
         17, 15, 17], dtype=int32),
    array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
         17, 18, 19, 20, 21,  0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11,
         12, 13, 14, 15, 16, 17, 18, 19, 20, 21,  0,  1,  2,  3,  4,  5,  6,
          7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21,  0,  1,
          2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18,
         19, 20, 21], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[2x2].1
  2
# ---
# name: test_calc_eq_matrix_b[2x2].2
  tuple(
    18,
    22,
  )
# ---
# name: test_calc_eq_matrix_b[3x6]
  tuple(
    array([ 0,  0,  0,  2,  2,  2,  2,  4,  4,  4,  4,  6,  6,  8,  8,  8, 10,
         10, 10, 10, 12, 12, 12, 12, 14, 14, 16, 16, 16, 18, 18, 18, 18, 20,
         20, 20, 20, 22, 22, 24, 24, 24, 26, 26, 26, 26, 28, 28, 28, 28, 30,
         30, 32, 32, 32, 34, 34, 34, 34, 36, 36, 36, 36, 38, 38, 40, 40, 40,
         42, 42, 42, 42, 44, 44, 44, 44, 46, 46, 48, 50, 52,  1,  1,  1,  3,
          3,  3,  3,  5,  5,  5,  5,  7,  7,  9,  9,  9, 11, 11, 11, 11, 13,
         13, 13, 13, 15, 15, 17, 17, 17, 19, 19, 19, 19, 21, 21, 21, 21, 23,
         23, 25, 25, 25, 27, 27, 27, 27, 29, 29, 29, 29, 31, 31, 33, 33, 33,
         35, 35, 35, 35, 37, 37, 37, 37, 39, 39, 41, 41, 41, 43, 43, 43, 43,
         45, 45, 45, 45, 47, 47, 49, 51, 53,  2,  8, 10,  4,  8, 10, 12,  6,
         10, 12, 14, 12, 14, 10, 16, 18, 12, 16, 18, 20, 14, 18, 20, 22, 20,
         22, 18, 24, 26, 20, 24, 26, 28, 22, 26, 28, 30, 28, 30, 26, 32, 34,
         28, 32, 34, 36, 30, 34, 36, 38, 36, 38, 34, 40, 42, 36, 40, 42, 44,
         38, 42, 44, 46, 44, 46, 42, 48, 50, 44, 48, 50, 52, 46, 50, 52, 54,
         52, 54, 50, 52, 54,  3,  9, 11,  5,  9, 11, 13,  7, 11, 13, 15, 13,
         15, 11, 17, 19, 13, 17, 19, 21, 15, 19, 21, 23, 21, 23, 19, 25, 27,
         21, 25, 27, 29, 23, 27, 29, 31, 29, 31, 27, 33, 35, 29, 33, 35, 37,
         31, 35, 37, 39, 37, 39, 35, 41, 43, 37, 41, 43, 45, 39, 43, 45, 47,
         45, 47, 43, 49, 51, 45, 49, 51, 53, 47, 51, 53, 55, 53, 55, 51, 53,
         55], dtype=int32),
    array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
         17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,
         34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,
         51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,
         68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80,  0,  1,  2,  3,
          4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
         21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37,
         38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54,
         55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71,
         72, 73, 74, 75, 76, 77, 78, 79, 80,  0,  1,  2,  3,  4,  5,  6,  7,
          8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24,
         25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41,
         42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58,
         59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75,
         76, 77, 78, 79, 80,  0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11,
         12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,
         29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45,
         46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62,
         63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79,
         80], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[3x6].1
  2
# ---
# name: test_calc_eq_matrix_b[3x6].2
  tuple(
    56,
    81,
  )
# ---
# name: test_trussopt[1x1_clarabel]
  tuple(
    np.float64(150.0),
    dict({
      2: 70.710678,
      5: 50.0,
    }),
  )
# ---
# name: test_trussopt[1x1_clarabel].1
  '''
      problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method               notes
  0  1x1 structure          1.0     1      1             1                2                 1       50.0        5.0          2        150.0               6       4                  6   load_factor  1x1 structure test
  '''
# ---
# name: test_trussopt[1x1_mosek]
  tuple(
    np.float64(150.0),
    dict({
      2: 70.710678,
      5: 50.0,
    }),
  )
# ---
# name: test_trussopt[1x1_mosek].1
  '''
      problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method               notes
  0  1x1 structure          1.0     1      1             1                2                 1       50.0        5.0          2        150.0               6       4                  6   load_factor  1x1 structure test
  '''
# ---
# name: test_trussopt[2x2_clarabel]
  tuple(
    np.float64(300.0),
    dict({
      2: 28.894891,
      3: 33.058281,
      22: 28.894891,
      23: 33.058282,
      25: 29.568227,
      26: 20.431773,
      27: 20.431773,
    }),
  )
# ---
# name: test_trussopt[2x2_clarabel].1
  '''
      problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method               notes
  0  2x2 structure          1.0     2      2             1                2                 1       50.0        5.0          2        300.0              22       9                 28   load_factor  2x2 structure test
  '''
# ---
# name: test_trussopt[2x2_mosek]
  tuple(
    np.float64(300.0),
    dict({
      2: 30.394442,
      3: 31.872783,
      22: 30.394442,
      23: 31.872783,
      25: 28.507884,
      26: 21.492116,
      27: 21.492116,
    }),
  )
# ---
# name: test_trussopt[2x2_mosek].1
  '''
      problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method               notes
  0  2x2 structure          1.0     2      2             1                2                 1       50.0        5.0          3        300.0              22       9                 28   load_factor  2x2 structure test
  '''
# ---
# name: test_trussopt[parallel_forces_clarabel]
  tuple(
    np.float64(1500.0),
    dict({
      0: 250.0,
      2: 70.710678,
      4: 150.0,
      5: 70.710678,
      7: 70.710678,
      9: 50.0,
      11: 70.710678,
      13: 70.710678,
      15: 70.710678,
      17: 250.0,
      18: 150.0,
      19: 50.0,
    }),
  )
# ---
# name: test_trussopt[parallel_forces_clarabel].1
  '''
        problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                 notes
  0  parallel forces          1.0     3      1             2                4                 1       50.0        5.0          2       1500.0              16       8                 20   load_factor  parallel forces test
  '''
# ---
# name: test_trussopt[parallel_forces_mosek]
  tuple(
    np.float64(1500.0),
    dict({
      0: 250.0,
      2: 70.710678,
      4: 150.0,
      5: 70.710678,
      7: 70.710678,
      9: 50.0,
      11: 70.710678,
      13: 70.710678,
      15: 70.710678,
      17: 250.0,
      18: 150.0,
      19: 50.0,
    }),
  )
# ---
# name: test_trussopt[parallel_forces_mosek].1
  '''
        problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                 notes
  0  parallel forces          1.0     3      1             2                4                 1       50.0        5.0          2       1500.0              16       8                 20   load_factor  parallel forces test
  '''
# ---
# name: test_trussopt[short_cantilever_clarabel]
  tuple(
    np.float64(300.0),
    dict({
      2: 35.355339,
      80: 35.355339,
      147: 35.355339,
      196: 35.355339,
      218: 35.355339,
      235: 35.355339,
    }),
  )
# ---
# name: test_trussopt[short_cantilever_clarabel].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  short cantilever          1.0     3      6             1                2                 1       50.0        5.0          2        300.0              81      28                251   load_factor  short cantliever test
  '''
# ---
# name: test_trussopt[short_cantilever_mosek]
  tuple(
    np.float64(300.0),
    dict({
      2: 35.355339,
      80: 35.355339,
      147: 35.355339,
      196: 35.355339,
      218: 35.355339,
      235: 35.355339,
    }),
  )
# ---
# name: test_trussopt[short_cantilever_mosek].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  short cantilever          1.0     3      6             1                2                 1       50.0        5.0          2        300.0              83      28                251   load_factor  short cantliever test
  '''
# ---
# name: test_trussopt[spanning_example_clarabel]
  tuple(
    np.float64(319.170903),
    dict({
      3: 4.673271,
      21: 2.207848,
      23: 0.932567,
      32: 5.639422,
      33: 1.884618,
      34: 0.812564,
      946: 4.672451,
      954: 0.932568,
      956: 2.206526,
      964: 0.812564,
      965: 1.884618,
      966: 5.641561,
      1068: 4.673271,
      1668: 4.67245,
      1889: 2.207848,
      1903: 4.67327,
      1992: 0.164975,
      1994: 0.415347,
      2009: 0.114234,
      2010: 0.463277,
      2014: 0.115482,
      2022: 0.163317,
      2023: 0.115482,
      2043: 0.115482,
      2084: 0.115482,
      2085: 0.163317,
      2112: 0.130168,
      2114: 0.164975,
      2125: 0.634977,
      2126: 0.229193,
      2204: 4.67245,
      2246: 2.206525,
      2444: 2.735521,
      2446: 3.058406,
      2466: 4.67327,
      2484: 0.163317,
      2488: 1.825939,
      2497: 0.421172,
      2504: 0.470885,
      2506: 0.421172,
      2508: 0.850633,
      2517: 0.421172,
      2524: 0.092043,
      2526: 0.041163,
      2528: 0.131344,
      2530: 0.293695,
      2546: 0.850633,
      2548: 0.421172,
      2550: 0.470885,
      2566: 1.825939,
      2570: 0.163317,
      2588: 4.67245,
      2608: 3.059566,
      2610: 2.736559,
      2722: 2.557811,
      2723: 2.557811,
      2724: 6.926294,
      2725: 6.926294,
      2726: 2.52556,
      2727: 2.52556,
    }),
  )
# ---
# name: test_trussopt[spanning_example_clarabel].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  spanning example          1.0    18      4             4               16                 7       3.75      0.204         13   319.170903             612      95               2734   load_factor  spanning example test
  '''
# ---
# name: test_trussopt[spanning_example_mosek]
  tuple(
    np.float64(319.170901),
    dict({
      3: 5.197197,
      21: 3.052654,
      23: 0.932571,
      32: 4.27319,
      33: 1.884622,
      34: 0.812564,
      946: 5.068506,
      954: 0.932571,
      956: 2.845146,
      964: 0.812564,
      965: 1.884622,
      966: 4.608776,
      1068: 5.197197,
      1668: 5.068506,
      1889: 3.052654,
      1903: 5.197197,
      1992: 0.164975,
      1994: 0.133033,
      2009: 0.228041,
      2010: 0.633252,
      2014: 0.115483,
      2022: 0.163317,
      2023: 0.115483,
      2043: 0.115483,
      2084: 0.115483,
      2085: 0.163317,
      2112: 0.161293,
      2114: 0.164975,
      2125: 0.616237,
      2126: 0.216649,
      2204: 5.068506,
      2246: 2.845146,
      2444: 2.072802,
      2446: 2.317463,
      2466: 5.197197,
      2484: 0.163317,
      2488: 1.825943,
      2497: 0.421172,
      2504: 0.470885,
      2506: 0.421172,
      2508: 0.850631,
      2517: 0.421172,
      2524: 0.114051,
      2526: 0.051005,
      2528: 0.042069,
      2530: 0.094068,
      2546: 0.850631,
      2548: 0.421172,
      2550: 0.470885,
      2566: 1.825943,
      2570: 0.163317,
      2588: 5.068506,
      2608: 2.49946,
      2610: 2.235585,
      2722: 2.788638,
      2723: 2.788638,
      2724: 6.926293,
      2725: 6.926293,
      2726: 2.734245,
      2727: 2.734245,
    }),
  )
# ---
# name: test_trussopt[spanning_example_mosek].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  spanning example          1.0    18      4             4               16                 9       3.75      0.204         14   319.170901             681      95               2734   load_factor  spanning example test
  '''
# ---
# name: test_trussopt[square_cantilever_clarabel]
  tuple(
    np.float64(2070.370371),
    dict({
      0: 16.666667,
      2: 12.272754,
      11: 7.444326,
      12: 62.328294,
      17: 12.350842,
      45: 16.666667,
      94: 16.666667,
      140: 16.666667,
      189: 16.666666,
      235: 16.666666,
      284: 16.666666,
      330: 16.666666,
      397: 52.704624,
      467: 12.272754,
      881: 12.272754,
      924: 7.444326,
      989: 62.112997,
      993: 5.176082,
      1221: 12.272753,
      1286: 2.995519,
      1288: 11.982077,
      1352: 66.782305,
      1354: 35.355339,
      1512: 8.888074,
      1514: 7.689655,
      1520: 3.105649,
      1564: 30.758622,
      1566: 11.785112,
      1569: 38.225958,
      1615: 35.355339,
      1695: 8.888075,
      1748: 31.705261,
      1780: 37.267799,
      1845: 8.888075,
      1867: 38.225958,
      1896: 37.396977,
      1954: 8.888075,
    }),
  )
# ---
# name: test_trussopt[square_cantilever_clarabel].1
  '''
          problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                   notes
  0  square cantilever          1.0     8      8             2                4                 1       50.0        5.0          6  2070.370371             383      81               2040   load_factor  square cantliever test
  '''
# ---
# name: test_trussopt[square_cantilever_mosek]
  tuple(
    np.float64(2070.37037),
    dict({
      0: 16.666667,
      2: 14.997594,
      11: 4.425264,
      12: 62.328296,
      17: 13.033368,
      45: 16.666667,
      94: 16.666667,
      140: 16.666667,
      189: 16.666667,
      235: 16.666667,
      284: 16.666667,
      330: 16.666667,
      397: 52.704628,
      467: 14.997594,
      881: 14.997594,
      924: 4.425264,
      989: 62.112999,
      993: 5.176083,
      1221: 14.997594,
      1286: 3.161056,
      1288: 12.644224,
      1352: 66.782307,
      1354: 35.355339,
      1512: 9.053612,
      1514: 10.414494,
      1520: 3.10565,
      1564: 41.657978,
      1566: 11.785113,
      1569: 26.506942,
      1615: 35.355339,
      1695: 9.053612,
      1748: 42.940061,
      1780: 37.2678,
      1845: 9.053612,
      1867: 26.506942,
      1896: 37.396978,
      1954: 9.053612,
    }),
  )
# ---
# name: test_trussopt[square_cantilever_mosek].1
  '''
          problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                   notes
  0  square cantilever          1.0     8      8             2                4                 1       50.0        5.0          6   2070.37037             377      81               2040   load_factor  square cantliever test
  '''
# ---
